// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful behavior Should merge skipped fields with previous values 1`] = `
{
  "done": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_statement_1",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_5": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`Stateful behavior Should merge skipped fields with previous values 2`] = `
{
  "done": [Function],
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_statement_1",
    },
    SummaryFailure {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_5",
    },
    SummaryFailure {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_6",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_5": {
      "errorCount": 2,
      "errors": [
        "field_statement_5",
        "field_statement_6",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`Stateful behavior Should merge skipped fields with previous values 3`] = `
{
  "done": [Function],
  "errorCount": 4,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_statement_1",
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "field_statement_2",
    },
    SummaryFailure {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_5",
    },
    SummaryFailure {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_6",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_2",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": true,
      "warnCount": 1,
      "warnings": [
        "field_statement_4",
      ],
    },
    "field_5": {
      "errorCount": 2,
      "errors": [
        "field_statement_5",
        "field_statement_6",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 1,
  "warnings": [
    SummaryFailure {
      "fieldName": "field_4",
      "groupName": undefined,
      "message": "field_statement_4",
    },
  ],
}
`;

exports[`more complex Should run correctly 1`] = `
SuiteSummary {
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 0,
  "tests": {},
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`more complex Should run correctly 2`] = `
SuiteSummary {
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "confirm": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "password": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "username": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`more complex Should run correctly 4`] = `
SuiteSummary {
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "password",
      "groupName": undefined,
      "message": "password is required",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "confirm": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "password": SummaryBase {
      "errorCount": 1,
      "errors": [
        "password is required",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "username": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`more complex Should run correctly 6`] = `
SuiteSummary {
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "password",
      "groupName": undefined,
      "message": "password is required",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "confirm": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "password": SummaryBase {
      "errorCount": 1,
      "errors": [
        "password is required",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "username": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
